--- a/project/src/main/res/values/arrays.xml
+++ b/project/src/main/res/values/arrays.xml
@@ -831,6 +831,20 @@
         <item>1</item>
     </string-array>
 
+    <string-array name="abacus_hsr_map_choices">
+        <item>@string/preference_abacus_setting_server</item>
+        <item>@string/preference_abacus_setting_controlgroup</item>
+        <item>Pin Icon</item>
+        <item>Text Only</item>
+    </string-array>
+
+    <string-array name="abacus_hsr_map_choice_values">
+        <item>-1</item>
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
     <string-array name="abacus_book_choices">
         <item>@string/preference_abacus_setting_server</item>
         <item>@string/preference_abacus_setting_controlgroup</item>
