--- a/project/src/main/res/layout/section_lx_search_row.xml
+++ b/project/src/main/res/layout/section_lx_search_row.xml
@@ -52,16 +52,32 @@
                 android:textSize="16sp"
                 app:textStyle="medium" />
 
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/activity_price"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="18dp"
                 android:layout_gravity="bottom|right"
-                android:gravity="right"
-                android:textColor="@android:color/white"
-                android:textSize="16sp"
-                app:textStyle="medium" />
+                android:orientation="vertical" >
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/activity_original_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:textColor="@color/hotel_details_separator"
+                    android:textSize="12sp"
+                    app:textStyle="medium" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/activity_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:textColor="@android:color/white"
+                    android:textSize="16sp"
+                    app:textStyle="medium" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
