--- a/project/src/lastMinute/res/values/colors.xml
+++ b/project/src/lastMinute/res/values/colors.xml
@@ -42,4 +42,10 @@
 
     <color name="bg_sale_text_view_color_lm">#E57AC231</color>
     <color name="confirmation_header_divider_color">#4D555D</color>
+
+    <color name="tablet_book_button_text_color_lm">#57B3FF</color>
+    <color name="tablet_trip_bucket_text_color_lm">#FFFFFF</color>
+    <color name="tablet_search_result_error_button_pressed_lm">#D1EAFF</color>
+    <color name="tablet_search_result_error_button_lm">#004E93</color>
+    <color name="tablet_results_search_blue_lm">#608405</color>
 </resources>
