s/4664 Hotel checkout AB test for traveler section

--- a/project/src/main/res/values/donottranslate.xml
+++ b/project/src/main/res/values/donottranslate.xml
@@ -103,6 +103,7 @@
     <string name="preference_hotel_hsr_map_icon">7772</string>
     <string name="preference_car_rates_collapse_top_listing">7769</string>
     <string name="preference_car_insurance_included_cko">7774</string>
+    <string name="preference_hotel_checkout_traveler_advance">7775</string>
 
     <string name="preference_abacus_setting_server">Abacus Server</string>
     <string name="preference_abacus_setting_controlgroup">Control Group</string>
