--- a/project/src/main/res/layout-sw600dp/section_credit_card.xml
+++ b/project/src/main/res/layout-sw600dp/section_credit_card.xml
@@ -137,7 +137,8 @@
         android:maxLength="4"
         android:paddingTop="4dp"
         android:textColor="@color/cvv_normal"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:inputType="textPassword" />
 
 
     <TextView
