--- a/project/src/main/res/layout/section_credit_card.xml
+++ b/project/src/main/res/layout/section_credit_card.xml
@@ -146,7 +146,8 @@
         android:gravity="center"
         android:maxLength="4"
         android:textColor="@color/cvv_normal"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:inputType="textPassword" />
 
     <!-- "Security Code for Doug's VISA" prompt -->
 
