--- a/project/src/lastMinute/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/lastMinute/res/values-sw600dp/tablet_themes.xml
@@ -34,10 +34,44 @@
 
         <item name="skin_tablet_flight_confirmation_placeholder">@drawable/bg_itin_placeholder_lm</item>
         <item name="skin_tablet_hotel_confirmation_placeholder">@drawable/bg_itin_placeholder_lm</item>
+        <item name="skin_icActionBarTripsDrawable">@drawable/ic_action_bar_trips_lm</item>
+        <item name="skin_tablet_legal_blurb_text_color">@color/tablet_legal_blurb_text_color_lm</item>
+        <item name="skin_tablet_confirmation_book_next_arrow_icon">@drawable/ic_tablet_confirmation_book_next_arrow_lm</item>
+        <item name="skin_tablet_confirmation_book_next_arrow_color">@color/tablet_confirmation_action_color_lm</item>
+        <item name="skin_tablet_confirmation_done_booking_icon">@drawable/ic_tablet_confirmation_done_booking_lm</item>
+        <item name="skin_tablet_confirmation_done_booking_color">@color/tablet_confirmation_action_color_lm</item>
+        <item name="skin_tablet_confirmation_calendar_icon">@drawable/ic_tablet_confirmation_calendar_lm</item>
+        <item name="skin_tablet_confirmation_phone_icon">@drawable/ic_tablet_confirmation_phone_lm</item>
+        <item name="skin_tablet_confirmation_share_icon">@drawable/ic_tablet_confirmation_share_lm</item>
+        <item name="skin_tablet_confirmation_action_color">@color/tablet_confirmation_action_color_lm</item>
+        <item name="skin_tablet_price_expanded_bucket_text_color">@color/tablet_price_expanded_bucket_text_color</item>
+        <item name="skin_tablet_checkout_price_breakdown_icon">@drawable/ic_tablet_checkout_price_breakdown_lm</item>
+
+        <item name="android:actionMenuTextColor">@color/actionbar_menu_text_color</item>
 
         <item name="android:checkboxStyle">@style/Widget.CompoundButton.CheckBox</item>
         <item name="android:homeAsUpIndicator" >@drawable/ic_action_bar_back_arrow_white_lm</item>
 
+        <item name="skin_bgSaleTextViewDrawable">@drawable/bg_sale_text_view_lm</item>
+        <item name="skin_bgFlightSummaryRowTablet">@drawable/bg_flight_summary_row_tablet_lm</item>
+        <item name="skin_bgSelectedFlightCard">@drawable/bg_selected_flight_card_lm</item>
+        <item name="skin_bgFlightSummaryRowReturnLegTabletDrawable">@drawable/bg_flight_summary_row_return_leg_tablet_lm</item>
+        <item name="skin_tabletCalenderResultsSearchBlue">@color/tablet_calender_results_search_blue_lm</item>
+        <item name="skin_sectionFlightEditTravelerLinkColor">@color/section_flight_edit_traveler_link_color_lm</item>
+        <item name="skin_roomRateRefundableCancellationTextColor">@color/room_rate_refundable_cancellation_text_color_lm</item>
+
+    </style>
+
+    <style name="V2.Theme.Activity.TabletWeb">
+        <item name="android:windowActionBarOverlay">false</item>
+        <item name="android:actionBarStyle">@style/V2.Widget.ActionBar.TabletWeb</item>
+        <item name="android:homeAsUpIndicator" >@drawable/ic_action_bar_back_arrow_lm</item>
+    </style>
+
+    <style name="V2.Widget.ActionBar.TabletWeb">
+        <item name="android:displayOptions">showHome|useLogo|homeAsUp|showTitle</item>
+        <item name="android:background">@color/action_bar_bg_color</item>
+        <item name="android:titleTextStyle">@style/FlightActionBarTextAppearance</item>
     </style>
 
     <style name="V2.Theme" parent="Theme.LM.Tablet" />
