--- a/project/src/lastMinute/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/lastMinute/res/values-sw600dp/tablet_themes.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.LM.Tablet" parent="Theme.LM">
-        <item name="skin_action_bar_logo_tablet">@drawable/ic_log_in_lm</item>
+        <item name="skin_action_bar_logo_tablet">@drawable/ic_lm_logo</item>
+        <item name="skin_actionbarTabletTitleColor">@color/actionbarTabletTitleColorLm</item>
         <item name="skin_collection_overlay_static_color">@color/collection_overlay_color</item>
         <item name="skin_tablet_book_button_text_color">@color/tablet_book_button_text_color_lm</item>
         <item name="skin_tablet_trip_bucket_arrow">@drawable/ic_book_bucket_arrow_lm</item>
@@ -47,7 +48,7 @@
         <item name="skin_tablet_price_expanded_bucket_text_color">@color/tablet_price_expanded_bucket_text_color</item>
         <item name="skin_tablet_checkout_price_breakdown_icon">@drawable/ic_tablet_checkout_price_breakdown_lm</item>
 
-        <item name="android:actionMenuTextColor">@color/actionbar_menu_text_color</item>
+        <item name="android:actionMenuTextColor">@color/action_bar_bg_color</item>
 
         <item name="android:checkboxStyle">@style/Widget.CompoundButton.CheckBox</item>
         <item name="android:homeAsUpIndicator" >@drawable/ic_action_bar_back_arrow_white_lm</item>
@@ -66,6 +67,9 @@
         <item name="android:windowActionBarOverlay">false</item>
         <item name="android:actionBarStyle">@style/V2.Widget.ActionBar.TabletWeb</item>
         <item name="android:homeAsUpIndicator" >@drawable/ic_action_bar_back_arrow_lm</item>
+        <item name="skin_action_bar_logo_tablet">@drawable/ic_log_in_lm</item>
+        <item name="android:actionMenuTextColor">@color/actionbarTabletTitleColor</item>
+        <item name="skin_actionbarTabletTitleColor">@color/actionbarTabletTitleColor</item>
     </style>
 
     <style name="V2.Widget.ActionBar.TabletWeb">
