--- a/project/src/lastMinute/res/values/colors.xml
+++ b/project/src/lastMinute/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="action_bar_bg_color">#E40088</color>
+    <color name="actionbarTabletTitleColorLm">@color/action_bar_bg_color</color>
     <color name="action_bar_text_color">#FFFFFF</color>
     <color name="action_bar_selected_tab_underline_color">#FFFFFF</color>
 
