--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
     <!-- Action Bar colors -->
     <color name="action_bar_selected_tab_underline_color">#FFED18</color>
+    <color name="actionbarTabletTitleColor">#F3F3F3</color>
     <color name="actionbar_suggestion_text_color">@color/actionbar_text</color>
     <color name="action_bar_flight_cancel_text_color">#E9E9E9</color>
     <color name="action_bar_flight_result_separator_color">#5FFF</color>
