--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -344,4 +344,6 @@
 
     <attr name="skin_sectionFlightEditTravelerLinkColor" format="reference|color" />
     <attr name="skin_roomRateRefundableCancellationTextColor" format="reference|color" />
+
+    <attr name="skin_actionbarTabletTitleColor" format="reference|color" />
 </resources>
