--- a/project/src/wotif/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/wotif/res/values-sw600dp/tablet_themes.xml
@@ -2,6 +2,7 @@
 <resources>
     <style name="Theme.Wotif.Tablet" parent="Theme.Wotif">
         <item name="skin_action_bar_logo_tablet">@drawable/ic_wotif_logo</item>
+        <item name="skin_actionbarTabletTitleColor">@color/actionbarTabletTitleColor</item>
         <item name="skin_collection_overlay_static_color">@color/collection_overlay_color</item>
         <item name="skin_tablet_book_button_text_color">@color/tablet_book_button_text_color_wotif</item>
         <item name="skin_tablet_trip_bucket_arrow">@drawable/ic_book_bucket_arrow_wotif</item>
