LastMinute Tablet: Added assets and updated color.

--- a/project/src/expedia/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/expedia/res/values-sw600dp/tablet_themes.xml
@@ -45,6 +45,8 @@
         <item name="skin_sectionFlightEditTravelerLinkColor">@color/section_flight_edit_traveler_link_color</item>
 
         <item name="skin_roomRateRefundableCancellationTextColor">@color/room_rate_refundable_cancellation_text_color</item>
+        <item name="skin_icRenovationTabletDrawable">@drawable/ic_renovation_tablet</item>
+        <item name="skin_icFeesTabletDrawable">@drawable/ic_fees_tablet</item>
     </style>
 
     <style name="V2.Theme" parent="Theme.Expedia.Tablet" />
