--- a/project/src/lastMinute/res/values/styles.xml
+++ b/project/src/lastMinute/res/values/styles.xml
@@ -32,4 +32,16 @@
         <item name="rightButton">@drawable/dark_segmented_right</item>
         <item name="textColor">@color/menu_bar_text_color</item>
     </style>
+
+    <!-- Styles for our custom Switch -->
+    <style name="Widget.CompoundButton.Switch" parent="android:Widget.CompoundButton">
+        <item name="thumbTrack">@drawable/btn_tablet_filter_normal</item>
+        <item name="thumb">@drawable/btn_tablet_filter_switch_lm</item>
+        <item name="thumbTextAppearance">@style/TextAppearance.Widget.Switch</item>
+        <item name="textOn">@string/switch_on</item>
+        <item name="textOff">@string/switch_off</item>
+        <item name="textPadding">13dip</item>
+        <item name="thumbMinWidth">100dip</item>
+        <item name="thumbPadding">15dip</item>
+    </style>
 </resources>
