--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -346,4 +346,7 @@
     <attr name="skin_roomRateRefundableCancellationTextColor" format="reference|color" />
 
     <attr name="skin_actionbarTabletTitleColor" format="reference|color" />
+    <attr name="skin_icTabletConfirmationCheckmarkDrawable" format="reference" />
+    <attr name="skin_icRenovationTabletDrawable" format="reference" />
+    <attr name="skin_icFeesTabletDrawable" format="reference" />
 </resources>
