--- a/project/src/airAsiaGo/res/values/donottranslate.xml
+++ b/project/src/airAsiaGo/res/values/donottranslate.xml
@@ -8,4 +8,7 @@
     <string name="email_app_support">airasiago-android@mobiata.com</string>
     <!-- App Support URL -->
     <string name="app_support_url_aag">http://www.mobiata.com/support/airasiago/android</string>
+
+    <!-- The merchant name to display to the user for Google Wallet -->
+    <string name="merchant_name">AirAsiaGo</string>
 </resources>
