--- a/project/src/lastMinute/res/values/donottranslate.xml
+++ b/project/src/lastMinute/res/values/donottranslate.xml
@@ -8,4 +8,8 @@
     <string name="email_app_support">lastminute-android@mobiata.com</string>
     <!-- App Support URL -->
     <string name="app_support_url_lastminute">http://www.mobiata.com/support/lastminute/android</string>
+
+    <!-- Google Wallet -->
+    <!-- The merchant name to display to the user for Google Wallet -->
+    <string name="merchant_name">lastminute.com.au</string>
 </resources>
