--- a/project/src/travelocity/res/values/donottranslate.xml
+++ b/project/src/travelocity/res/values/donottranslate.xml
@@ -8,4 +8,8 @@
     <string name="email_app_support">travelocity-android@mobiata.com</string>
     <!-- App Support URL -->
     <string name="app_support_url_tvly">http://www.mobiata.com/support/travelocity/android</string>
+
+    <!-- Google Wallet -->
+    <!-- The merchant name to display to the user for Google Wallet -->
+    <string name="merchant_name">Travelocity</string>
 </resources>
