--- a/project/src/voyages/res/values/donottranslate.xml
+++ b/project/src/voyages/res/values/donottranslate.xml
@@ -21,4 +21,7 @@
 
     <!-- Email addresses -->
     <string name="email_app_support">vsc-android@mobiata.com</string>
+
+    <!-- The merchant name to display to the user for Google Wallet -->
+    <string name="merchant_name">VSC</string>
 </resources>
