--- a/project/src/wotif/res/values/donottranslate.xml
+++ b/project/src/wotif/res/values/donottranslate.xml
@@ -8,4 +8,8 @@
     <string name="email_app_support">wotif-android@mobiata.com</string>
     <!-- App Support URL -->
     <string name="app_support_url_wotif">http://www.mobiata.com/support/wotif/android</string>
+
+    <!-- Google Wallet -->
+    <!-- The merchant name to display to the user for Google Wallet -->
+    <string name="merchant_name">Wotif</string>
 </resources>
