--- a/project/src/lastMinute/res/values-sw600dp/tablet_themes.xml
+++ b/project/src/lastMinute/res/values-sw600dp/tablet_themes.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.LM.Tablet" parent="Theme.LM">
-        <item name="skin_action_bar_logo_tablet">@drawable/ic_lm_logo</item>
-        <item name="skin_actionbarTabletTitleColor">@color/actionbarTabletTitleColorLm</item>
+        <item name="skin_action_bar_logo_tablet">@drawable/ic_log_in_lm</item>
+        <item name="skin_actionbarTabletTitleColor">@color/actionbarTabletTitleColor</item>
         <item name="skin_collection_overlay_static_color">@color/collection_overlay_color</item>
         <item name="skin_tablet_book_button_text_color">@color/tablet_book_button_text_color_lm</item>
         <item name="skin_tablet_trip_bucket_arrow">@drawable/ic_book_bucket_arrow_lm</item>
@@ -35,7 +35,7 @@
 
         <item name="skin_tablet_flight_confirmation_placeholder">@drawable/bg_itin_placeholder_lm</item>
         <item name="skin_tablet_hotel_confirmation_placeholder">@drawable/bg_itin_placeholder_lm</item>
-        <item name="skin_icActionBarTripsDrawable">@drawable/ic_action_bar_trips_lm</item>
+        <item name="skin_icActionBarTripsDrawable">@drawable/ic_action_bar_trips</item>
         <item name="skin_tablet_legal_blurb_text_color">@color/tablet_legal_blurb_text_color_lm</item>
         <item name="skin_tablet_confirmation_book_next_arrow_icon">@drawable/ic_tablet_confirmation_book_next_arrow_lm</item>
         <item name="skin_tablet_confirmation_book_next_arrow_color">@color/tablet_confirmation_action_color_lm</item>
@@ -47,8 +47,6 @@
         <item name="skin_tablet_confirmation_action_color">@color/tablet_confirmation_action_color_lm</item>
         <item name="skin_tablet_price_expanded_bucket_text_color">@color/tablet_price_expanded_bucket_text_color_lm</item>
         <item name="skin_tablet_checkout_price_breakdown_icon">@drawable/ic_tablet_checkout_price_breakdown_lm</item>
-
-        <item name="android:actionMenuTextColor">@color/action_bar_bg_color</item>
 
         <item name="android:checkboxStyle">@style/Widget.CompoundButton.CheckBox</item>
         <item name="android:homeAsUpIndicator" >@drawable/ic_action_bar_back_arrow_white_lm</item>
@@ -63,11 +61,8 @@
         <item name="skin_icTabletConfirmationCheckmarkDrawable">@drawable/ic_tablet_confirmation_checkmark_lm</item>
         <item name="skin_icRenovationTabletDrawable">@drawable/ic_renovation_tablet_lm</item>
         <item name="skin_icFeesTabletDrawable">@drawable/ic_fees_tablet_lm</item>
+        <item name="skin_tablet_hotel_coupon_text_color">@color/tablet_hotel_coupon_text_color_lm</item>
 
-    </style>
-
-    <style name="OverflowMenuButton" parent="@android:style/Widget.Holo.ActionButton.Overflow">
-        <item name="android:src">@drawable/ic_overflow_pink</item>
     </style>
 
     <style name="V2.Theme.Activity.TabletWeb">
