--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -243,6 +243,7 @@
         <item name="skin_tablet_price_expanded_bucket_text_color">@color/tablet_confirmation_action_color</item>
         <item name="skin_tablet_checkout_price_breakdown_icon">@drawable/ic_tablet_checkout_price_breakdown</item>
         <item name="skin_icTabletConfirmationCheckmarkDrawable">@drawable/ic_tablet_confirmation_checkmark</item>
+        <item name="skin_tabletFilterPriceTextColor">@color/tablet_filter_price_text</item>
 
     </style>
 
