--- a/project/src/main/res/layout/fragment_tablet_confirmation.xml
+++ b/project/src/main/res/layout/fragment_tablet_confirmation.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/confirmation_image_view"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/confirmation_image_height"
-                android:scaleType="centerCrop" />
+                android:scaleType="fitCenter" />
 
             <LinearLayout
                 android:layout_width="match_parent"
