fix trip bucket bad height which was causing it to be pushed down

--- a/project/src/main/res/layout/fragment_tripbucket.xml
+++ b/project/src/main/res/layout/fragment_tripbucket.xml
@@ -15,9 +15,9 @@
         <com.expedia.bookings.widget.SwipeOutLayout
             style="@style/V2.Widget.FrameLayout.ResultsTripBucketItem"
             android:id="@+id/trip_bucket_flight_trip_swipeout"
-            app:swipeOutContentId="@+id/trip_bucket_flight_trip"
-            app:swipeOutDirection="east"
-            app:swipeOutIndicatorId="@+id/flight_swipe_out_undo_bar">
+            app:EBSwipeOutContentId="@+id/trip_bucket_flight_trip"
+            app:EBSwipeOutDirection="east"
+            app:EBSwipeOutIndicatorId="@+id/flight_swipe_out_undo_bar">
 
             <FrameLayout
                 android:id="@id/trip_bucket_flight_trip"
@@ -37,9 +37,9 @@
         <com.expedia.bookings.widget.SwipeOutLayout
             style="@style/V2.Widget.FrameLayout.ResultsTripBucketItem"
             android:id="@+id/trip_bucket_hotel_trip_swipeout"
-            app:swipeOutContentId="@+id/trip_bucket_hotel_trip"
-            app:swipeOutDirection="east"
-            app:swipeOutIndicatorId="@+id/hotel_swipe_out_undo_bar">
+            app:EBSwipeOutContentId="@+id/trip_bucket_hotel_trip"
+            app:EBSwipeOutDirection="east"
+            app:EBSwipeOutIndicatorId="@+id/hotel_swipe_out_undo_bar">
 
             <FrameLayout
                 android:id="@id/trip_bucket_hotel_trip"
