--- a/project/src/main/res/layout/row_tablet_room_rate.xml
+++ b/project/src/main/res/layout/row_tablet_room_rate.xml
@@ -39,7 +39,7 @@
                 android:layout_alignTop="@id/room_rate_image_view"
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/bg_sale_text_view"
+                android:background="?attr/skin_bgSaleTextViewDrawable"
                 android:paddingBottom="1dp"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
