--- a/project/src/main/res/layout/activity_phone_launch.xml
+++ b/project/src/main/res/layout/activity_phone_launch.xml
@@ -16,7 +16,7 @@
         style="@style/LaunchActionBar"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/cars_launch_actionbar_color"
+        android:background="?attr/skin_launchActionBarBackgroundColor"
         app:contentInsetLeft="0dp"
         app:contentInsetStart="0dp" />
 </FrameLayout>
