--- a/project/src/travelocity/res/values/styles.xml
+++ b/project/src/travelocity/res/values/styles.xml
@@ -6,6 +6,23 @@
         <item name="android:progressDrawable">@drawable/ratingbar_userreview_blue</item>
     </style>
 
+    <style name="LaunchActionBarTravelocity" parent="@style/Widget.AppCompat.Light.ActionBar.Solid">
+        <item name="android:background">@color/bg_blue_color_travelocity</item>
+        <item name="background">@color/bg_blue_color_travelocity</item>
+        <item name="android:titleTextStyle">@style/TitleBarTextColorTravelocity</item>
+        <item name="titleTextStyle">@style/TitleBarTextColorTravelocity</item>
+    </style>
+
+    <style name="TitleBarTextColorTravelocity" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="textColor">#FFFFFF</item>
+    </style>
+
+    <style name="LaunchActionBarTabTextStyle" parent="@style/Widget.AppCompat.ActionBar.TabText">
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
     <style name="Dark.ActionBar.Travelocity" parent="Dark.ActionBar">
         <item name="android:background">@drawable/bg_action_bar_travelocity</item>
         <item name="android:backgroundSplit">@drawable/bg_action_bar_bottom_travelocity</item>
