--- a/project/src/main/res/xml/preferences_dev.xml
+++ b/project/src/main/res/xml/preferences_dev.xml
@@ -139,7 +139,7 @@
             android:entries="@array/abacus_default_choices"
             android:entryValues="@array/abacus_default_choice_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_aa_test"
+            android:key="6714"
             android:summary="Select a test group"
             android:title="AA Abacus Test" />
 
@@ -147,7 +147,7 @@
             android:entries="@array/abacus_default_choices"
             android:entryValues="@array/abacus_default_choice_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_flight_free_cancellation"
+            android:key="7005"
             android:summary="Select a test group"
             android:title="Flight Free Cancellation Messaging" />
 
@@ -155,7 +155,7 @@
             android:entries="@array/abacus_search_influence_choices"
             android:entryValues="@array/abacus_search_influence_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_hotel_search_influence_messaging"
+            android:key="7017"
             android:summary="Select a test group"
             android:title="Hotel Search Influence Messaging" />
 
@@ -163,7 +163,7 @@
             android:entries="@array/abacus_default_choices"
             android:entryValues="@array/abacus_default_choice_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_launch_screen"
+            android:key="7369"
             android:summary="Select a test group"
             android:title="Launch Screen NearBy Deals vs Collections" />
 
@@ -171,7 +171,7 @@
             android:entries="@array/abacus_default_choices"
             android:entryValues="@array/abacus_default_choice_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_checkout_or_messaging"
+            android:key="7372"
             android:summary="Select a test group"
             android:title="Checkout OR Form Messaging" />
 
@@ -179,7 +179,7 @@
             android:entries="@array/abacus_default_choices"
             android:entryValues="@array/abacus_default_choice_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_hotel_result_rating"
+            android:key="7373"
             android:summary="Select a test group"
             android:title="Hotel Result Rating Test" />
 
@@ -187,7 +187,7 @@
             android:entries="@array/abacus_default_choices"
             android:entryValues="@array/abacus_default_choice_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_flight_confirmation_car_cross_sell"
+            android:key="7370"
             android:summary="Select a test group"
             android:title="Flight Confirmation Car Cross sell" />
 
@@ -195,7 +195,7 @@
             android:entries="@array/abacus_default_choices"
             android:entryValues="@array/abacus_default_choice_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_hotel_search_sale_pin"
+            android:key="7535"
             android:summary="Select a test group"
             android:title="Hotel Search Sale Pin Green" />
 
@@ -203,7 +203,7 @@
             android:entries="@array/abacus_default_choices"
             android:entryValues="@array/abacus_default_choice_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_flight_confirmation_lx_cross_sell"
+            android:key="7533"
             android:summary="Select a test group"
             android:title="Flight Confirmation Lx Cross sell" />
 
@@ -211,7 +211,7 @@
             android:entries="@array/abacus_default_choices"
             android:entryValues="@array/abacus_default_choice_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_hotel_etp_search_results"
+            android:key="7532"
             android:summary="Select a test group"
             android:title="Hotels ETP book now/pay later search results" />
 
@@ -219,7 +219,7 @@
             android:entries="@array/abacus_default_choices"
             android:entryValues="@array/abacus_default_choice_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_hotel_itin_lx_cross_sell"
+            android:key="7612"
             android:summary="Select a test group"
             android:title="Hotel Itin Lx Cross sell" />
 
@@ -227,7 +227,7 @@
             android:entries="@array/abacus_hsr_map_choices"
             android:entryValues="@array/abacus_hsr_map_choice_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_hotel_hsr_map_icon"
+            android:key="7772"
             android:summary="Select a test group"
             android:title="Hotel HSR Map Icon" />
 
@@ -235,7 +235,7 @@
             android:entries="@array/abacus_default_choices"
             android:entryValues="@array/abacus_default_choice_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_car_rates_collapse_top_listing"
+            android:key="7769"
             android:summary="Select a test group"
             android:title="Car Rates Collapse Top Listing" />
 
@@ -243,7 +243,7 @@
             android:entries="@array/abacus_default_choices"
             android:entryValues="@array/abacus_default_choice_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_car_insurance_included_cko"
+            android:key="7774"
             android:summary="Select a test group"
             android:title="Car Insurance Included CKO" />
 
@@ -251,7 +251,7 @@
             android:entries="@array/abacus_default_choices"
             android:entryValues="@array/abacus_default_choice_values"
             android:defaultValue="@string/preference_abacus_default"
-            android:key="@string/preference_hotel_checkout_traveler_advance"
+            android:key="7775"
             android:summary="Select a test group"
             android:title="Hotel Checkout Traveler to Payment" />
 
@@ -259,9 +259,17 @@
             android:entries="@array/abacus_default_choices"
             android:entryValues="@array/abacus_default_choice_values"
             android:defaultValue="-1"
-            android:key="@string/preference_hotel_choices"
+            android:key="7777"
             android:summary="Select a test group"
             android:title="Hotel Coupon ETP Test" />
+
+        <ListPreference
+            android:entries="@array/abacus_default_choices"
+            android:entryValues="@array/abacus_default_choice_values"
+            android:defaultValue="-1"
+            android:key="7973"
+            android:summary="Select a test group"
+            android:title="Hotel 3x points messaging" />
 
     </PreferenceCategory>
 
