--- a/project/src/main/res/layout/lx_checkout_summary_widget.xml
+++ b/project/src/main/res/layout/lx_checkout_summary_widget.xml
@@ -4,12 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="16dp"
-    android:paddingLeft="14dp"
-    android:paddingRight="16dp"
-    android:paddingTop="14dp"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     tools:showIn="@layout/widget_lx_checkout">
+
+    <LinearLayout
+        android:paddingBottom="16dp"
+        android:paddingLeft="14dp"
+        android:paddingRight="16dp"
+        android:paddingTop="14dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -95,6 +100,34 @@
             android:textColor="@color/lx_checkout_text_color"
             android:textSize="16sp"
             app:textStyle="medium" />
+    </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/price_change_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#f2f2f2"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="#D5D5D5" />
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/price_change_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingBottom="10dp"
+            android:paddingTop="8dp"
+            android:textColor="@color/lx_checkout_text_color"
+            android:textSize="14sp"
+            app:textStyle="light" />
+
     </LinearLayout>
 
 </com.expedia.bookings.widget.LXCheckoutSummaryWidget>
