adding padding to text below slide to purchase container

--- a/project/src/main/res/layout/activity_flight_overview_and_checkout.xml
+++ b/project/src/main/res/layout/activity_flight_overview_and_checkout.xml
@@ -73,6 +73,8 @@
             android:id="@+id/trip_price_container_bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:gravity="center_horizontal"
             android:orientation="vertical" />
     </LinearLayout>
