--- a/project/src/main/res/layout/fragment_flight_checkout.xml
+++ b/project/src/main/res/layout/fragment_flight_checkout.xml
@@ -134,6 +134,7 @@
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="18dp"
         android:textColor="@android:color/white" />
 
 </LinearLayout>
